--- a/fkapp/fkapp/config.cfg
+++ b/fkapp/fkapp/config.cfg
@@ -3,8 +3,8 @@
 DEBUG = True
 SECRET_KEY = 'secret test'
 
-#使用couchdb-ext
-COUCHDB_SERVER = 'http://localhost:5984/'
+#使用couchdb-ext,双引号
+COUCHDB_SERVER = "http://ajaxj:eeeeeeee@localhost:5984"
 COUCHDB_DATABASE ='pyweb-db'
 
 
