添加flask-mongoalchemy的配置方法

--- a/fkapp/fkapp/config.cfg
+++ b/fkapp/fkapp/config.cfg
@@ -4,8 +4,16 @@ DEBUG = True
 SECRET_KEY = 'secret test'
 
 #使用couchdb-ext,双引号
-COUCHDB_SERVER = "http://ajaxj:eeeeeeee@localhost:5984"
-COUCHDB_DATABASE ='pyweb-db'
+#COUCHDB_SERVER = "http://ajaxj:eeeeeeee@localhost:5984"
+#COUCHDB_DATABASE ='pyweb-db'
+
+#mongoalchemy
+MONGOALCHEMY_SERVER = '127.0.0.1'
+MONGOALCHEMY_DATABASE = 'test'
+MONGOALCHEMY_USER= 'ajaxj'
+MONGOALCHEMY_PASSWORD = 'eeeeeeee'
+#这句关键，不设为false就账号通不过
+MONGOALCHEMY_SERVER_AUTH = False
 
 
 #关掉couchdbkit
